plugins {
    id 'java'
    id 'idea'
}

idea {
    module {
        inheritOutputDirs = false
        outputDir = file('./webapp/WEB-INF/classes')
    }
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    springVersion = "5.1.8.RELEASE"
    tomcatVersion = '8.5.42'
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation "org.springframework:spring-test:$springVersion"
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    implementation("org.springframework:spring-jdbc:$springVersion")
    implementation("org.springframework:spring-web:$springVersion")
    implementation "org.reflections:reflections:0.10.2"

    implementation("org.apache.commons:commons-dbcp2:2.6.0")

    runtimeOnly("com.h2database:h2:2.1.214")
    runtimeOnly('mysql:mysql-connector-java:8.0.28')

    implementation("org.apache.tomcat.embed:tomcat-embed-core:$tomcatVersion")
    implementation("org.apache.tomcat.embed:tomcat-embed-logging-juli:8.5.2")
    implementation("org.apache.tomcat.embed:tomcat-embed-jasper:$tomcatVersion")
    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}